--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "pulse_project",
+  "name": "grid_test_project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +16,6 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.66.1"
-  }
+  },
+  "description": ""
 }
